# DreamRain-Bot

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  REUSE.toml  THIRD_PARTY_NOTICES.md  bot.py  docker-compose.example.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: build-image.yml  test.yml
docs/: song_search_quality.md
scripts/: orm.py
src/: bootstrap.py
src/chiffon_data/: __init__.py
src/chiffon_data/core/: __init__.py  context.py  song.py
src/chiffon_data/games/: __init__.py
src/chiffon_data/games/chunithm/: __init__.py  data_fetcher.py  music_xml_parser.py  schemas.py
src/chiffon_data/games/maimai/: __init__.py  data_fetcher.py  map_xml_parser.py  music_xml_parser.py  schemas.py
src/chiffon_data/integrations/: __init__.py
src/chiffon_data/integrations/lxns/: __init__.py  accounts.py  binding.py  constants.py  oauth_client.py  player_api.py
src/common/: __init__.py
src/plugins/autopcr/: __init__.py  _httpserver_asgi.py  compat.py  config.py  handlers.py  orm.py  remote.py  storage.py
src/plugins/chiffon_bot/: __init__.py  config.py
src/plugins/chiffon_bot/app/: __init__.py
src/plugins/chiffon_bot/domains/: __init__.py  auto_score_updater.py  score_validator.py
src/plugins/chiffon_bot/infra/: __init__.py  html_render.py
src/plugins/chiffon_bot/integrations/: __init__.py
src/plugins/chiffon_bot/shared/: __init__.py  bot_response.py  domain_adapter.py  generic_sync.py  song_data.py  song_data_updater.py
src/plugins/kanna_note/: __init__.py  base.py  database.py  download.py  handle.py  model.py  skill_text_handle.py  table.py  util.py
src/plugins/kanna_note/draw/: draw_clan_battle_info.py  draw_enemy_introduce.py  draw_event.py  draw_fullcard.py  draw_introduce.py  draw_max_boss_time_return.py  draw_story.py  draw_unit_icon.py
src/plugins/nonebot_plugin_fortune/: __init__.py  config.py  data_source.py  download.py  utils.py
src/plugins/nonebot_plugin_githubcard/: __init__.py  config.py
src/plugins/nonebot_plugin_pcrjjc/: bsgamesdk.py  config.py  main.py  pcrclient.py  query.py
src/plugins/nonebot_plugin_picstatus/: bg_provider.py
src/plugins/nonebot_plugin_picstatus/collectors/: network.py
src/plugins/nonebot_plugin_repeater/: __init__.py  config.py
src/plugins/nonebot_plugin_tarot/: config.py  data_source.py
src/plugins/nonebot_plugin_wordle/: data_source.py  utils.py
src/plugins/permission_admin/: __init__.py  config.py  core.py  privilege.py
src/plugins/platform_adapter/: __init__.py  capability.py  context.py  message.py  sender.py
src/plugins/pokepoke_miss/: __init__.py  __main__.py
src/plugins/priconne/: __init__.py  _pcr_data.py  bsgamesdk.py  captcha.py  chara.py  cherugo.py  config.py  credentials.py  device.json  login.py  pcr_data_runtime.py  pcr_data_updater.py  pcrclient.py  readme.md  safeservice.py  storage.py
src/plugins/priconne/arena/: __init__.py  arena.py  old_main.py  pcrdfans.py  record.py
src/plugins/priconne/clanbattle/: __init__.py  base.py  model.py  pcr_calculator.py  sql.py
src/plugins/priconne/compat/: __init__.py  aiorequests.py  convert2img.py  typing.py  util.py
src/plugins/priconne/fendao/: __init__.py  create_img.py  timeaxis.py
src/plugins/priconne/games/: __init__.py  avatar_guess.py  desc_guess.py
src/plugins/priconne/migrations/: e828532300c4_init_priconne_orm.py
src/plugins/priconne/orm/: __init__.py  models.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  song_search_quality_cases.jsonl  song_seed.py
tests/integration/: test_db_backed_song_query.py  test_oauth_bind.py
tests/nonebot/: test_autopcr_plugin.py  test_chiffon_plugin.py  test_plugin_smoke.py  test_priconne_captcha.py  test_priconne_compat.py
tests/unit/: test_account_oauth_manual_code.py  test_chiffon_bot_catalog_client.py  test_chiffon_bot_lxns_client.py  test_chiffon_reaction.py  test_chiffon_response.py  test_chunithm_render_assets.py  test_game_metadata.py  test_lxns_account_store_boundary.py  test_lxns_sse_client.py  test_maimai_pic_reply.py  test_maimai_render_assets.py  test_oauth_client.py  test_platform_adapter_context.py  test_platform_adapter_sender.py  test_priconne_credentials.py  test_random_song_filter.py  test_song_search_quality.py
tools/: song_search_eval.py
(+111 files in other folders)
