[project]
name = "dreamrain-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache==0.12.3",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.11.8",
    "aiosignal==1.3.1",
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "apscheduler==3.11.0",
    "arclet-alconna==1.8.34",
    "arclet-alconna-tools==0.7.10",
    "async-timeout==5.0.1",
    "asyncpg>=0.31.0",
    "attrs==24.2.0",
    "bbcode==1.1.0",
    "bili-ticket-gt-python>=0.3.2",
    "brotli==1.1.0",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "click==8.1.7",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cookit==0.8.1",
    "cycler==0.12.1",
    "dataclasses-json>=0.6.7",
    "dateparser==1.2.0",
    "deprecated>=1.3.1",
    "diskcache==5.6.3",
    "emoji==2.14.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.5",
    "filetype==1.2.0",
    "fleep==1.0.1",
    "fonttools==4.55.0",
    "frozenlist==1.5.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "h2==4.1.0",
    "hpack==4.0.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.0",
    "hyperframe==6.0.1",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "importlib-resources==6.4.5",
    "inexactsearch==1.0.2",
    "iso8601==2.1.0",
    "jinja2==3.1.4",
    "kiwisolver==1.4.7",
    "loguru==0.7.2",
    "logzero>=1.7.0",
    "mako==1.3.6",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.9.2",
    "mdurl==0.1.2",
    "meme-generator==0.2.2",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "nepattern==0.7.7",
    "networkx>=3.6.1",
    "nonebot-adapter-onebot==2.4.6",
    "nonebot-plugin-alconna==0.54.0",
    "nonebot-plugin-analysis-bilibili==2.8.0",
    "nonebot-plugin-apscheduler==0.5.0",
    "nonebot-plugin-datastore==1.3.0",
    "nonebot-plugin-guess-song>=1.4.0",
    "nonebot-plugin-htmlrender==0.6.7",
    "nonebot-plugin-localstore==0.7.4",
    "nonebot-plugin-memes==0.8.1",
    "nonebot-plugin-orm[postgresql]==0.7.6",
    "nonebot-plugin-send-anything-anywhere==0.7.1",
    "nonebot-plugin-session==0.3.2",
    "nonebot-plugin-session-orm==0.2.0",
    "nonebot-plugin-userinfo==0.2.6",
    "nonebot-plugin-waiter==0.8.0",
    "nonebot-plugin-whateat-pic==1.5.3",
    "nonebot-plugin-wordcloud>=0.9.0",
    "nonebot2==2.4.3",
    "numpy==2.1.3",
    "opencv-python-headless==4.10.0.84",
    "openpyxl>=3.1.5",
    "packaging==24.2",
    "pil-utils==0.2.1",
    "pillow>=10.4.0",
    "playwright==1.57.0",
    "propcache==0.2.0",
    "psutil==6.1.0",
    "pulp>=3.3.2",
    "py-cpuinfo==9.0.0",
    "pybind11==2.13.6",
    "pycryptodome>=3.23.0",
    "pydantic==2.10.2",
    "pydantic-core==2.27.1",
    "pyee==13.0.0",
    "pygments==2.18.0",
    "pygtrie==2.5.0",
    "pymdown-extensions==10.12",
    "pyparsing==3.2.0",
    "pypika-tortoise==0.3.2",
    "pypinyin==0.53.0",
    "pyspellchecker==0.8.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-markdown-math==0.8",
    "python-multipart==0.0.18",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "qrcode==8.0",
    "rapidfuzz==3.10.1",
    "regex==2024.11.6",
    "requests>=2.32.5",
    "rich==13.9.4",
    "silpa-common==0.3",
    "six==1.16.0",
    "sniffio==1.3.1",
    "soundex==1.1.3",
    "sqlalchemy==2.0.36",
    "starlette==0.41.3",
    "strenum==0.4.15",
    "tarina==0.6.7",
    "toml==0.10.2",
    "tomli==2.2.1",
    "tortoise-orm[asyncmy,asyncpg]==0.23.0",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "tzlocal==5.2",
    "unitypy>=1.25.0",
    "uvicorn==0.32.1",
    "watchfiles==1.0.0",
    "websockets==14.1",
    "werkzeug>=3.1.8",
    "win32-setctime==1.1.0",
    "yarl==1.18.0",
    "zhconv>=1.4.3",
    "zipp==3.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "nonebug>=0.4.3",
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=1.3.0",
    "pybind11-stubgen>=2.5.4",
]

[tool.nonebot]
plugins = [
    "src.plugins.autopcr",
    "src.plugins.priconne",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
